--- a/style.css
+++ b/style.css
@@ -3,29 +3,30 @@ body, *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-size: 100%;         /*  100% is 16 px but we want 10 px so we do 62.5 */
+    font-size: 62.5%;         /*  100% is 16 px but we want 10 px so we do 62.5 */
 
 }
 
-
-.parent{
-    font-size: 10px;
-    color: red;
+.parent-intro{
+    font-size: 30px;
+}
+.child-1{
+    border: 1px solid red;
 }
 
-h2{
-    margin: 1rem;
-
-}
-.px-size{
-    font-size: 20px;
-
+.child-2{
+    border: 1px solid red;
 }
 
-.rem-size{
-    font-size: 2rem;
+.child-3{
+    border: 1px solid red;
 }
 
-.em-size{
-    font-size: 5em;
+.parent-spacing{
+    font-size: 30px;
+}
+
+
+.parent-flexconstants{
+    font-size: 30px;
 }
