--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@ body, *{
     margin: 0;
     box-sizing: border-box;
     font-size: 62.5%;         /*  100% is 16 px but we want 10 px so we do 62.5 */
-    background-image: url(https://cdn2.steamgriddb.com/hero_thumb/0a3b78847b7932e38d601e9231ca2212.jpg)
+    
     
 }
-
+body{
+    background-image: url(https://cdn2.steamgriddb.com/hero_thumb/0a3b78847b7932e38d601e9231ca2212.jpg)
+}
 
 .title{
     font-size: 100px;;
@@ -24,15 +26,15 @@ body, *{
 }
 .box123{
     border: 1px solid red;
-    width: 28%;
+    width: 29%;
     border-radius: 20px;
-    background-color: aliceblue;
+    background-color: khaki;
 }
 
 .img123{
     display: block;
     margin: auto;
-    background-color: aliceblue;
+    background-color: khaki;
     
 }
 
@@ -51,3 +53,6 @@ body, *{
     margin-bottom: 2rem;
 }
 
+.h2test{
+    font-size: 5rem;
+}
