--- a/style.css
+++ b/style.css
@@ -62,3 +62,9 @@ body{
 .img{
     padding-bottom: 2rem;
 }
+@media screen and (max-width: 800px){
+    .img{
+        flex-direction: column;
+    }
+}
+    
