--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
     width: 28%;
     text-align: center;
     background-color: rgb(204, 203, 191);
+    box-shadow: 5px 5px 5px rgb(129, 129, 124);
    
 }
 
@@ -53,10 +54,12 @@ body{
 .card:hover{
     border: 10px solid rgb(0, 195, 255);
     border-radius: 2rem;
-    width: 28%;
+    width: 32%;
     text-align: center;
     background-color: rgb(130, 240, 231);
     transition: 0.3s;
+    transform: rotate(2deg);
+    align-items: center;
    
 }
 
